--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=42556d998959f342bafa5bf5c482b0b9"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/ag-grid-community/dist/ag-grid-community.min.js"></script>
     <title>React App</title>
   </head>
   <body>
