--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script
-      type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=42556d998959f342bafa5bf5c482b0b9"
+            type="text/javascript"
+            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=42556d998959f342bafa5bf5c482b0b9&libraries=services"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/ag-grid-community/dist/ag-grid-community.min.js"></script>
     <title>React App</title>
