--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey=42556d998959f342bafa5bf5c482b0b9&libraries=services"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/ag-grid-community/dist/ag-grid-community.min.js"></script>
-    <title>React App</title>
+    <title>나들이</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
