--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <script
             type="text/javascript"
-            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=42556d998959f342bafa5bf5c482b0b9&libraries=services"
+            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%&libraries=services"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/ag-grid-community/dist/ag-grid-community.min.js"></script>
     <title>나들이</title>
